docs/v5.3.0/_sources/gallery/experiment/sphere/coupling_vs_filter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/coupling_vs_filter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_coupling_vs_filter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_coupling_vs_filter.py:


Sphere: Coupling vs polarization filter
=======================================

.. GENERATED FROM PYTHON SOURCE LINES 5-50



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_filter_001.png
   :alt: coupling vs filter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_filter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | fused_silica          | calcium               |
    +-----------------------+-----------------------+
    | water                 | gold                  |
    +-----------------------+-----------------------+
    | BAK1                  | copper                |
    +-----------------------+-----------------------+
    | soda_lime_glass       | silicon               |
    +-----------------------+-----------------------+
    | lithium_niobate       | aluminium             |
    +-----------------------+-----------------------+
    | argon                 | iron                  |
    +-----------------------+-----------------------+
    | flint                 | polyetylene           |
    +-----------------------+-----------------------+
    | BAF10                 | sodium                |
    +-----------------------+-----------------------+
    | germanium             | silver                |
    +-----------------------+-----------------------+
    | air                   | nickel                |
    +-----------------------+-----------------------+
    | crown                 | zinc                  |
    +-----------------------+-----------------------+
    | SF5                   |                       |
    +-----------------------+-----------------------+
    | polystyren            |                       |
    +-----------------------+-----------------------+
    | BK7                   |                       |
    +-----------------------+-----------------------+
    | acetone               |                       |
    +-----------------------+-----------------------+
    | ZBLAN                 |                       |
    +-----------------------+-----------------------+

    [<matplotlib.lines.Line2D object at 0x7fa357483650>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fa354eabb90>, <matplotlib.lines.Line2D object at 0x7fa354c292d0>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fa354c2af50>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        PhotodiodeSet,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[0] * ureg.radian
    )

    source = GaussianSet(
        wavelength=[408] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=0.2,
    )

    scatterer = SphereSet(
        diameter=np.linspace(1000, 1200, 20) * ureg.nanometer,
        material=[SellmeierMaterial(material_name="BK7"), SellmeierMaterial(material_name="water")],
        medium=[1],
    )

    detector = PhotodiodeSet(
        numerical_aperture=[0.1],
        phi_offset=[-180] * ureg.degree,
        gamma_offset=[0] * ureg.degree,
        polarization_filter=np.linspace(-180, 180, 100) * ureg.degree,
        sampling=[500],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source, detector_set=detector)

    result = experiment.get("coupling")

    result.plot(x="detector:polarization_filter", std="scatterer:diameter")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.933 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_coupling_vs_filter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_vs_filter.ipynb <coupling_vs_filter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_vs_filter.py <coupling_vs_filter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_vs_filter.zip <coupling_vs_filter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
